probabilities up to full house

--- a/probability-poker.ipynb
+++ b/probability-poker.ipynb
@@ -24,13 +24,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['QS', '3S', 'KS', '9S', '7S', '8S', '10S', 'AS', '5S', '4S', '6S', 'JS', '2S', 'QH', '3H', 'KH', '9H', '7H', '8H', '10H', 'AH', '5H', '4H', '6H', 'JH', '2H', 'QC', '3C', 'KC', '9C', '7C', '8C', '10C', 'AC', '5C', '4C', '6C', 'JC', '2C', 'QD', '3D', 'KD', '9D', '7D', '8D', '10D', 'AD', '5D', '4D', '6D', 'JD', '2D']\n",
+      "['7H', 'QH', 'AH', '8H', '6H', '3H', '4H', 'JH', '5H', '10H', 'KH', '2H', '9H', '7C', 'QC', 'AC', '8C', '6C', '3C', '4C', 'JC', '5C', '10C', 'KC', '2C', '9C', '7S', 'QS', 'AS', '8S', '6S', '3S', '4S', 'JS', '5S', '10S', 'KS', '2S', '9S', '7D', 'QD', 'AD', '8D', '6D', '3D', '4D', 'JD', '5D', '10D', 'KD', '2D', '9D']\n",
       "2598960.0\n",
       "2598960.0\n",
       "2598960.0\n",
       "2598960\n",
-      "['KC', '6D', '8S', '9S', 'JH', '6H', 'AD', '9H', '5D', '8C', 'QD', '6S', '2D', 'KD', '8H', '3H', '8D', '6C', 'AC', '5C', '5H', '7C', '3D', '3S', '9D', 'QS', 'KS', 'KH', '10C', '2C', '9C', '10D', 'AS', 'QH', '3C', 'JS', '7D', '10H', '5S', 'QC', '4C', 'JC', '4S', 'AH', '4D', '10S', '2H', '2S', 'JD', '4H', '7H', '7S']\n",
-      "[['KC', '8S', 'JH', 'AD', '5D'], ['6D', '9S', '6H', '9H', '8C']]\n"
+      "['QS', 'QH', '6S', 'QD', '2C', '7S', '3H', 'JD', '5S', 'AC', '8S', '2D', '7H', 'AH', '6H', '5H', '10H', '10D', '6C', 'KD', '3D', '4S', '7C', '3C', '9S', '9D', '8C', '2S', '10S', 'KH', '8D', '5D', '5C', 'KC', '9C', '4C', 'QC', '9H', '4D', '8H', 'KS', '10C', '2H', '4H', 'AS', '3S', '7D', '6D', 'AD', 'JH', 'JC', 'JS']\n",
+      "[['QS', '6S', '2C', '3H', '5S'], ['QH', 'QD', '7S', 'JD', 'AC']]\n"
      ]
     }
    ],
@@ -87,8 +87,8 @@
     "\n",
     "# defining a function to call with any deck and hand size, using math.factorial and combination equation\n",
     "# We use combination and not permutation because order DOES NOT MATTER\n",
-    "def calcCombsFact(cards_total, cards_hand):\n",
-    "    return math.factorial(cards_total) / (math.factorial(num_cards_deck - cards_hand) * math.factorial(cards_hand))\n",
+    "def calcCombsFact(n, r):\n",
+    "    return math.factorial(n) / (math.factorial(n - r) * math.factorial(r))\n",
     "\n",
     "hand_combs_fact = calcCombsFact(num_cards_deck, num_cards_hand)\n",
     "print(hand_combs_fact)\n",
@@ -143,9 +143,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'2', '3', '4', 'Q', 'K', '8', '10', 'A', '6', 'J', '9', '7', '5'}\n",
-      "['2D', '3D', '4D', 'QD', 'KD', '8D', '10D', 'AD', '6D', 'JD', '9D', '7D', '5D', '2C', '3C', '4C', 'QC', 'KC', '8C', '10C', 'AC', '6C', 'JC', '9C', '7C', '5C', '2H', '3H', '4H', 'QH', 'KH', '8H', '10H', 'AH', '6H', 'JH', '9H', '7H', '5H', '2S', '3S', '4S', 'QS', 'KS', '8S', '10S', 'AS', '6S', 'JS', '9S', '7S', '5S']\n",
-      "{'4D', 'QS', 'QD', '5S', '2D', '10C', '3H', '2C', '8S', '10H', '7C', 'KH', '5D', '3C', '8C', 'AH', 'KC', '7D', '2S', 'JC', '10S', '2H', '4C', '4H', '6C', '7S', 'JD', 'QH', 'JS', 'KS', '6S', 'KD', '9C', '8H', '7H', '3S', '6D', '5H', 'AC', '5C', '9S', '9D', '6H', 'QC', 'AS', '10D', '3D', '9H', '4S', 'JH', '8D', 'AD'}\n"
+      "13.0 6.0 220.0\n",
+      "0.4225690276110444\n",
+      "0.0475390156062425\n",
+      "0.02112845138055222\n",
+      "0.0014405762304921968\n"
      ]
     }
    ],
@@ -156,8 +158,28 @@
     "# combinations of drawing 3 other ranks different than paired -> 12c3 (only 3 cards from remaining 12 ranks)\n",
     "# combinations of drawing  each of the 3 cards different suits (so they are not pairs themselves) -> 4c1 * 4c1 * 4c1 -> 4^3\n",
     "\n",
-    "def prob_pair (game_deck, num_players, num_cards, num_rounds):\n",
-    "    combs_vals = "
+    "P_rank = calcCombsFact(13, 1)\n",
+    "P_second_rank = calcCombsFact(4, 2)\n",
+    "P_different_card = calcCombsFact(12, 3)\n",
+    "\n",
+    "print(P_rank, P_second_rank, P_different_card)\n",
+    "\n",
+    "P_pair = (calcCombsFact(13, 1) * calcCombsFact(4, 2) * calcCombsFact(12, 3) * (calcCombsFact(4, 1) * calcCombsFact(4, 1) * calcCombsFact(4, 1))) / calcCombsFact(52, 5)\n",
+    "print(P_pair)\n",
+    "\n",
+    "P_two_pair = (calcCombsFact(13, 2) * calcCombsFact(4, 2) * calcCombsFact(4, 2) * calcCombsFact(11, 1) * calcCombsFact(4, 1)) / calcCombsFact(52, 5)\n",
+    "print(P_two_pair)\n",
+    "\n",
+    "P_three_of_a_kind = (calcCombsFact(13, 1) * calcCombsFact(4, 3) * calcCombsFact(12, 2) * (calcCombsFact(4, 1) * calcCombsFact(4, 1))) / calcCombsFact(52, 5)\n",
+    "print(P_three_of_a_kind)\n",
+    "\n",
+    "P_full_house = (calcCombsFact(13, 1) * calcCombsFact(4, 3) * calcCombsFact(12, 1) * calcCombsFact(4, 2)) / calcCombsFact(52, 5)\n",
+    "print(P_full_house)\n",
+    "\n",
+    "P_\n",
+    "\n",
+    "# def prob_pair (game_deck, num_players, num_cards, num_rounds):\n",
+    "    "
    ]
   }
  ],
