42 game done, now to playwith probabilities

--- a/probability-poker.ipynb
+++ b/probability-poker.ipynb
@@ -29,8 +29,8 @@
       "2598960.0\n",
       "2598960.0\n",
       "2598960\n",
-      "['QS', 'QH', '6S', 'QD', '2C', '7S', '3H', 'JD', '5S', 'AC', '8S', '2D', '7H', 'AH', '6H', '5H', '10H', '10D', '6C', 'KD', '3D', '4S', '7C', '3C', '9S', '9D', '8C', '2S', '10S', 'KH', '8D', '5D', '5C', 'KC', '9C', '4C', 'QC', '9H', '4D', '8H', 'KS', '10C', '2H', '4H', 'AS', '3S', '7D', '6D', 'AD', 'JH', 'JC', 'JS']\n",
-      "[['QS', '6S', '2C', '3H', '5S'], ['QH', 'QD', '7S', 'JD', 'AC']]\n"
+      "['7C', 'QS', '2S', '4C', '5H', '5D', '10D', '8S', 'KD', 'JC', '2D', '5S', '3S', '7D', '3D', '9C', 'QH', 'AC', 'AH', '8C', '6S', '7S', 'AS', '6C', 'KS', 'QC', '9S', 'QD', 'AD', '4H', '6H', '8D', '9D', 'KC', '3H', '8H', 'JD', '3C', '9H', '7H', '5C', 'JS', '4S', 'KH', 'JH', '6D', '10S', '10H', '4D', '10C', '2C', '2H']\n",
+      "[['7C', '2S', '5H', '10D', 'KD'], ['QS', '4C', '5D', '8S', 'JC']]\n"
      ]
     }
    ],
@@ -90,15 +90,15 @@
     "def calcCombsFact(n, r):\n",
     "    return math.factorial(n) / (math.factorial(n - r) * math.factorial(r))\n",
     "\n",
-    "hand_combs_fact = calcCombsFact(num_cards_deck, num_cards_hand)\n",
-    "print(hand_combs_fact)\n",
+    "total_possible_hands = calcCombsFact(num_cards_deck, num_cards_hand)\n",
+    "print(total_possible_hands)\n",
     "\n",
     "\n",
     "# using itertools\n",
     "hand_combs_itertools = len(list(itertools.combinations(deck, 5)))\n",
     "print(hand_combs_itertools)\n",
     "\n",
-    "# Function to shuffle deeck array, fusher yates\n",
+    "# Function to shuffle deeck array, fisher yates\n",
     "def shuffleDeck(arr, len):\n",
     "    for i in range(len - 1, 0, -1):\n",
     "        j = random.randint(0, i + 1)\n",
@@ -136,18 +136,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "13.0 6.0 220.0\n",
-      "0.4225690276110444\n",
-      "0.0475390156062425\n",
-      "0.02112845138055222\n",
-      "0.0014405762304921968\n"
+      "Probability of a pair -> 0.4225690276110444\n",
+      "Probability of two-pair -> 0.0475390156062425\n",
+      "Probability of a 3 of a kind -> 0.02112845138055222\n",
+      "Probability of a straight -> 0.003924646781789639\n",
+      "Probability of a flush -> 0.001965401545233478\n",
+      "Probability of a full-house -> 0.0014405762304921968\n",
+      "Probability of a Four of a kind -> 0.00026010404161664664\n",
+      "10.0\n",
+      "4.0\n",
+      "2598960.0\n",
+      "Probability of a straight-flush -> 1.5390771693292702e-05\n",
+      "220.0\n",
+      "64\n",
+      "35.0\n"
      ]
     }
    ],
@@ -158,26 +167,78 @@
     "# combinations of drawing 3 other ranks different than paired -> 12c3 (only 3 cards from remaining 12 ranks)\n",
     "# combinations of drawing  each of the 3 cards different suits (so they are not pairs themselves) -> 4c1 * 4c1 * 4c1 -> 4^3\n",
     "\n",
-    "P_rank = calcCombsFact(13, 1)\n",
-    "P_second_rank = calcCombsFact(4, 2)\n",
-    "P_different_card = calcCombsFact(12, 3)\n",
     "\n",
-    "print(P_rank, P_second_rank, P_different_card)\n",
+    "# Probability of getting a pair on one-player first 5 cards\n",
+    "combs_one_rank = calcCombsFact(13, 1) # Select any rank of 13 possible (A-K)\n",
+    "combs_two_suits_same_rank = calcCombsFact(4, 2) # Select 2 cards from different suits\n",
+    "combs_ranks_three_different_cards = calcCombsFact(12, 3) # Select any 3 different cards from the remaining 12 ranks\n",
+    "combs_suits_three_different_cards = calcCombsFact(4, 1) * calcCombsFact(4, 1) * calcCombsFact(4, 1) # Select any suit for each of the remaining 3 cards\n",
     "\n",
-    "P_pair = (calcCombsFact(13, 1) * calcCombsFact(4, 2) * calcCombsFact(12, 3) * (calcCombsFact(4, 1) * calcCombsFact(4, 1) * calcCombsFact(4, 1))) / calcCombsFact(52, 5)\n",
-    "print(P_pair)\n",
+    "P_pair = (combs_one_rank * combs_two_suits_same_rank * combs_ranks_three_different_cards * combs_suits_three_different_cards) / total_possible_hands\n",
+    "print(\"Probability of a pair ->\", P_pair)\n",
     "\n",
-    "P_two_pair = (calcCombsFact(13, 2) * calcCombsFact(4, 2) * calcCombsFact(4, 2) * calcCombsFact(11, 1) * calcCombsFact(4, 1)) / calcCombsFact(52, 5)\n",
-    "print(P_two_pair)\n",
+    "# Probability of getting two pair on one-player first 5 cards\n",
+    "combs_two_ranks = calcCombsFact(13, 2) # Select any two ranks of the 13 possible\n",
+    "combs_suits_first_pair = calcCombsFact(4, 2) # Select 2 different suits for first rank\n",
+    "combs_suits_second_pair = calcCombsFact(4, 2) # Select 2 different suits for second rank\n",
+    "combs_rank_last_card = calcCombsFact(11, 1) # Select any rank from 11 possible left (not first pair value nor second pair value)\n",
+    "combs_suit_last_card = calcCombsFact(4, 1) # Select any suit for last card remaining\n",
     "\n",
-    "P_three_of_a_kind = (calcCombsFact(13, 1) * calcCombsFact(4, 3) * calcCombsFact(12, 2) * (calcCombsFact(4, 1) * calcCombsFact(4, 1))) / calcCombsFact(52, 5)\n",
-    "print(P_three_of_a_kind)\n",
+    "P_two_pair = (combs_two_ranks * combs_suits_first_pair * combs_suits_second_pair * combs_rank_last_card * combs_suit_last_card) / total_possible_hands\n",
+    "print(\"Probability of two-pair ->\", P_two_pair)\n",
     "\n",
-    "P_full_house = (calcCombsFact(13, 1) * calcCombsFact(4, 3) * calcCombsFact(12, 1) * calcCombsFact(4, 2)) / calcCombsFact(52, 5)\n",
-    "print(P_full_house)\n",
+    "# Probability of getting a three of a kind on one-player first 5 cards\n",
+    "combs_three_suits_same_rank = calcCombsFact(4, 3)\n",
+    "combs_two_remaining_ranks = calcCombsFact(12, 2)\n",
+    "combs_two_remaining_suits = calcCombsFact(4, 1) * calcCombsFact(4, 1)\n",
     "\n",
-    "P_\n",
+    "P_three_of_a_kind = (combs_one_rank * combs_three_suits_same_rank * combs_two_remaining_ranks * combs_two_remaining_suits) / total_possible_hands\n",
+    "print(\"Probability of a 3 of a kind ->\", P_three_of_a_kind)\n",
     "\n",
+    "# Probability of getting a straight\n",
+    "combs_five_sequenced_cards = calcCombsFact(10, 1) # There are 10 possible sets of 5 sequenced ranks, we need one of them\n",
+    "combs_suits_five_cards = calcCombsFact(4, 1) * calcCombsFact(4, 1) * calcCombsFact(4, 1) * calcCombsFact(4, 1) * calcCombsFact(4, 1) # Select any suit for each of the 5 cards\n",
+    "combs_straight_flush = calcCombsFact(10, 1) * calcCombsFact(4, 1) # The combinations of a straight flush, any set of 5 sequenced cards and only 1 suit for each of the 5 cards\n",
+    "\n",
+    "P_straight = ((combs_five_sequenced_cards * combs_suits_five_cards) - combs_straight_flush) / total_possible_hands\n",
+    "print(\"Probability of a straight ->\", P_straight)\n",
+    "\n",
+    "# Probability of a flush\n",
+    "combs_five_ranks = calcCombsFact(13, 5)\n",
+    "combs_same_suit = calcCombsFact(4, 1)\n",
+    "\n",
+    "P_flush = ((combs_five_ranks * combs_same_suit) - combs_straight_flush) / total_possible_hands\n",
+    "print(\"Probability of a flush ->\", P_flush)\n",
+    "\n",
+    "# Probability of a Full House\n",
+    "combs_second_rank = calcCombsFact(12, 1)\n",
+    "combs_two_suits_same_rank = calcCombsFact(4, 2)\n",
+    "P_full_house = (combs_one_rank * combs_three_suits_same_rank * combs_second_rank * combs_two_suits_same_rank) / total_possible_hands\n",
+    "print(\"Probability of a full-house ->\", P_full_house)\n",
+    "\n",
+    "# Probability of Four of a kind\n",
+    "combs_four_suits = calcCombsFact(4, 4)\n",
+    "combs_one_suit = calcCombsFact(4, 1)\n",
+    "\n",
+    "P_four_of_a_kind = (combs_one_rank * combs_four_suits * combs_one_rank * combs_one_suit) / total_possible_hands\n",
+    "print(\"Probability of a Four of a kind ->\", P_four_of_a_kind)\n",
+    "\n",
+    "# Probability of a Straight flush\n",
+    "combs_sequence = calcCombsFact(10, 1)\n",
+    "combs_same_suit = calcCombsFact(4, 1)\n",
+    "\n",
+    "print(combs_sequence)\n",
+    "print(combs_same_suit)\n",
+    "print(total_possible_hands)\n",
+    "\n",
+    "P_straight_flush = (combs_sequence * combs_same_suit) / total_possible_hands\n",
+    "print(\"Probability of a straight-flush ->\", P_straight_flush)\n",
+    "\n",
+    "\n",
+    "# Now to play around with a second draw:\n",
+    "print(calcCombsFact(12, 3))\n",
+    "print(4 * 4 * 4)\n",
+    "print(calcCombsFact(7, 3))\n",
     "# def prob_pair (game_deck, num_players, num_cards, num_rounds):\n",
     "    "
    ]
