Making progress with dragon game

--- a/probability-dragons.ipynb
+++ b/probability-dragons.ipynb
@@ -18,15 +18,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "['black', 'black', 'silver', 'red']\n"
+      "['yellow', 'red', 'black', 'silver']\n",
+      "red\n",
+      "You can place 1 red on red\n",
+      "yellow\n",
+      "You can place 1 yellow on yellow\n",
+      "blue\n",
+      "green\n",
+      "silver\n",
+      "['blue', 'green']\n",
+      "You can place 1 silver on blue or green.\n",
+      "black\n",
+      "You lose 1 black dice to the well\n"
      ]
     }
    ],
@@ -34,30 +44,84 @@
     "import math\n",
     "import random\n",
     "\n",
-    "dice = ['red', 'yellow', 'blue', 'green', 'silver', 'black']\n",
-    "numDice = 4\n",
-    "positions = ['red', 'yellow', 'blue', 'green', 'pozo']\n",
+    "dice_vals = ['red', 'yellow', 'blue', 'green', 'silver', 'black']\n",
+    "open_positions = ['red', 'yellow', 'blue', 'green']\n",
+    "# dragons = positions[:4]\n",
+    "# print(dragons)\n",
     "\n",
-    "rand = random.randint(0, len(dice) - 1)\n",
-    "print(rand)\n",
-    "diceRolled = []\n",
+    "P_good_roll = sum(1 for dice in dice_vals if dice in open_positions or dice == 'silver') / len(dice_vals)\n",
+    "P_bad_roll = sum(1 for dice in dice_vals if dice not in open_positions and dice != 'silver') / len(dice_vals)\n",
     "\n",
-    "dragon_red = []\n",
-    "dragon_yellow = []\n",
-    "dragon_blue = []\n",
-    "dragon_green = []\n",
-    "pozo = []\n",
+    "game = True\n",
+    "num_dice = 4\n",
+    "dice_rolled = []\n",
     "\n",
-    "def rollDice():\n",
-    "    diceRolled = []\n",
+    "def rollDice(dice_to_roll):\n",
     "\n",
-    "    for i in range(1, 5):\n",
-    "        diceRolled.append(dice[random.randint(0, len(dice) - 1)])\n",
-    "    print(diceRolled)\n",
+    "    while dice_to_roll > 0:\n",
+    "        dice_rolled.append(random.choice(dice_vals))\n",
+    "        dice_to_roll -= 1\n",
     "\n",
+    "    print(dice_rolled)\n",
+    "    for color in dice_vals:\n",
     "\n",
-    "rollDice()\n",
-    "\n"
+    "        print(color)\n",
+    "        num_color_rolled = 0\n",
+    "        if (color in dice_rolled and (color in open_positions or color == 'silver')):\n",
+    "\n",
+    "            for rolled in dice_rolled:\n",
+    "                if rolled == color:\n",
+    "                    num_color_rolled += 1\n",
+    "        elif (color == 'black' and color in dice_rolled):\n",
+    "\n",
+    "            for rolled in dice_rolled:\n",
+    "\n",
+    "                if rolled == color:\n",
+    "                    num_color_rolled += 1\n",
+    "\n",
+    "        if num_color_rolled != 0:\n",
+    "\n",
+    "            if color == 'black':\n",
+    "\n",
+    "                print(f\"You lose {num_color_rolled} {color} dice to the well\")\n",
+    "            elif color == 'silver':\n",
+    "\n",
+    "                possible_silvers = []\n",
+    "                # colors_to_place = set(dice_rolled)\n",
+    "                # print(colors_to_place)\n",
+    "                for position in open_positions:\n",
+    "                    if position not in dice_rolled:\n",
+    "                        possible_silvers.append(position)\n",
+    "\n",
+    "                print(possible_silvers)\n",
+    "                if (len(possible_silvers) == 1):\n",
+    "                    print(f\"You can place {num_color_rolled} {color} on {possible_silvers[0]}.\")\n",
+    "                elif (len(possible_silvers) == 2):\n",
+    "                    print(f\"You can place {num_color_rolled} {color} on {possible_silvers[0]} or {possible_silvers[1]}.\")\n",
+    "                elif (len(possible_silvers) == 3):\n",
+    "                        print(f\"You can place {num_color_rolled} {color} on {possible_silvers[0]}, {possible_silvers[1]} or {possible_silvers[2]}.\")\n",
+    "                else:\n",
+    "                    print(f\"You can place {num_color_rolled} {color} on {possible_silvers[0]}, {possible_silvers[1]}, {possible_silvers[2]} or {possible_silvers[3]}.\")\n",
+    "                \n",
+    "            else:\n",
+    "                print(f\"You can place {num_color_rolled} {color} on {color}\")\n",
+    "    \n",
+    "\n",
+    "def calcAtLeastOneGoodRoll(num_dice):\n",
+    "\n",
+    "    possible_bad_vals = sum(1 for color in dice_vals if color not in open_positions and color != 'silver')\n",
+    "    P_good_roll = 1 - math.pow(possible_bad_vals / len(dice_vals), num_dice)\n",
+    "\n",
+    "    return P_good_roll\n",
+    "\n",
+    "while game:\n",
+    "\n",
+    "    dice_to_roll = num_dice\n",
+    "    roll = input(f\"the probability of getting a good roll is {calcAtLeastOneGoodRoll(dice_to_roll)}, would you like to roll?\")\n",
+    "    \n",
+    "    if roll == 'yes':\n",
+    "        rollDice(dice_to_roll)\n",
+    "    else: break"
    ]
   }
  ],
