--- a/probability-poker.ipynb
+++ b/probability-poker.ipynb
@@ -24,13 +24,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['7H', 'QH', 'AH', '8H', '6H', '3H', '4H', 'JH', '5H', '10H', 'KH', '2H', '9H', '7C', 'QC', 'AC', '8C', '6C', '3C', '4C', 'JC', '5C', '10C', 'KC', '2C', '9C', '7S', 'QS', 'AS', '8S', '6S', '3S', '4S', 'JS', '5S', '10S', 'KS', '2S', '9S', '7D', 'QD', 'AD', '8D', '6D', '3D', '4D', 'JD', '5D', '10D', 'KD', '2D', '9D']\n",
+      "['3H', '6H', '2H', 'QH', 'JH', '7H', '5H', 'AH', 'KH', '10H', '4H', '8H', '9H', '3S', '6S', '2S', 'QS', 'JS', '7S', '5S', 'AS', 'KS', '10S', '4S', '8S', '9S', '3C', '6C', '2C', 'QC', 'JC', '7C', '5C', 'AC', 'KC', '10C', '4C', '8C', '9C', '3D', '6D', '2D', 'QD', 'JD', '7D', '5D', 'AD', 'KD', '10D', '4D', '8D', '9D']\n",
       "2598960.0\n",
       "2598960.0\n",
       "2598960.0\n",
       "2598960\n",
-      "['7C', 'QS', '2S', '4C', '5H', '5D', '10D', '8S', 'KD', 'JC', '2D', '5S', '3S', '7D', '3D', '9C', 'QH', 'AC', 'AH', '8C', '6S', '7S', 'AS', '6C', 'KS', 'QC', '9S', 'QD', 'AD', '4H', '6H', '8D', '9D', 'KC', '3H', '8H', 'JD', '3C', '9H', '7H', '5C', 'JS', '4S', 'KH', 'JH', '6D', '10S', '10H', '4D', '10C', '2C', '2H']\n",
-      "[['7C', '2S', '5H', '10D', 'KD'], ['QS', '4C', '5D', '8S', 'JC']]\n"
+      "['8C', '6H', 'QS', '7S', 'JD', 'KD', 'AD', '4C', '4D', 'KS', 'KC', '5H', '6S', '7H', '5S', '2D', '9H', 'QD', 'AS', '7C', '5D', '10C', 'JH', '3D', '10H', 'QC', '6D', '9S', '3S', '8H', '10D', '5C', '9C', 'JS', '4H', 'KH', '7D', '3H', '10S', '2C', 'QH', '4S', '9D', 'AC', 'JC', '3C', '6C', '2H', '8D', '2S', '8S', 'AH']\n",
+      "[['8C', 'QS', 'JD', 'AD', '4D'], ['6H', '7S', 'KD', '4C', 'KS']]\n"
      ]
     }
    ],
@@ -53,7 +53,7 @@
     "num_cards_deck = len(deck)\n",
     "num_cards_hand = 5\n",
     "\n",
-    "# Python a pelo\n",
+    "# Calcular combinaciones Python a pelo\n",
     "fact_deck = 1\n",
     "fact_hands = 1\n",
     "fact_deck_hands = 1\n",
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
